# tripit-py3

./: .gitignore  .tripit_creds.json.swp  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  migration-from-0.x.md
scripts/: capture_fixtures.py  debug_oauth.py  export_trips.py
scripts/_capture/: __init__.py  credentials.py  endpoints.py  local_listener.py  oauth_setup.py  programmatic_login.py  scrub.py  tokens.py
src/tripit/: __init__.py  auth.py  client.py  exceptions.py  pagination.py  serialize.py  transport.py  xml.py
src/tripit/cli/: __init__.py  authorize.py
src/tripit/models/: __init__.py  _base.py  common.py  enums.py  envelope.py  objects.py  points.py  profile.py  seattracker.py  trip.py
src/tripit/schemas/: tripit-api-obj-v1.xsd
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_client_objects.py  test_client_phase2.py  test_client_writes.py  test_models.py  test_oauth_live.py  test_objects_models.py  test_real_fixtures.py  test_scrub.py  test_serialize.py  test_transport.py
tests/fixtures/json/: error_response.json  get_air.json  get_profile.json  get_trip_single.json  list_points_program.json  list_trip_single_page.json  real_get_activity.json  real_get_air.json  real_get_cruise.json  real_get_lodging.json  real_get_profile.json  real_get_rail.json  real_get_trip.json  real_get_trip_with_objects.json  real_list_object_activity.json  real_list_object_air.json  real_list_object_cruise.json  real_list_object_lodging.json  real_list_points_program.json  real_list_trip_past.json  real_list_trip_upcoming.json  real_list_trip_with_objects.json  warning_response.json
tests/fixtures/xml/: air_with_emissions.xml  air_with_unknown_element.xml  error_response.xml  get_air.xml  get_profile.xml  get_trip_single.xml  list_object_mixed.xml  list_points_program.xml  list_trip_single_page.xml  warning_response.xml
tripit/: __init__.py
