[project]
name = "tripit"
version = "1.0.0"
description = "Modern Python 3 client for the TripIt v1 API"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "Neil", email = "neil@autumnlabs.com" }]
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.6,<3.0",
  "lxml>=5.0,<7.0",
  "tenacity>=8.2,<10.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "ty>=0.0.1a1",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "hypothesis>=6.100",
  "pre-commit>=3.7",
  "beautifulsoup4>=4.14.3",
]

[project.scripts]
tripit-authorize = "tripit.cli.authorize:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tripit"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "ANN", "PT"]
ignore = ["ANN401", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=tripit --cov-report=term-missing"
testpaths = ["tests"]
filterwarnings = ["error"]
